<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_cell"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:layout_margin="8dp"
    >

    <TextView
        android:id="@+id/tv_day_of_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tv_day_of_week" />

    <ImageView
        android:id="@+id/iv_icon_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/placeholder"
        android:src="@drawable/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_day_of_week"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/tv_temp" />


</android.support.constraint.ConstraintLayout>
